<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2012 JBoss Inc
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.drools</groupId>
		<artifactId>uberfire-jbpm</artifactId>
		<version>5.5.0-SNAPSHOT</version>
	</parent>

	<artifactId>jbpm-console-client</artifactId>
	<packaging>war</packaging>

	<name>jBPM Console - Client</name>

	<dependencies>

		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>jbpm-console-shared</artifactId>
			<version>5.5.0-SNAPSHOT</version>
		</dependency>

	</dependencies>

	<description>jBPM Console - Client</description>
	<build>
		<outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<fork>false</fork>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.maven.version}</version>
				<configuration>
					<module>org.drools.guvnor.FastCompiledjBPMShowcase</module>
					<logLevel>INFO</logLevel>
					<compileSourcesArtifacts>
						<compileSourcesArtifact>org.uberfire:widgets-core</compileSourcesArtifact>
						<compileSourcesArtifact>org.uberfire:widgets-commons</compileSourcesArtifact>
						<compileSourcesArtifact>org.uberfire:uberfire-workbench</compileSourcesArtifact>
						<compileSourcesArtifact>org.uberfire:vfs-model</compileSourcesArtifact>
						<compileSourcesArtifact>org.uberfire:backend-api</compileSourcesArtifact>
						<compileSourcesArtifact>org.uberfire:backend-commons</compileSourcesArtifact>
						<compileSourcesArtifact>org.drools:jbpm-console-shared</compileSourcesArtifact>
					</compileSourcesArtifacts>
					<runTarget>org.drools.guvnor.jBPMShowcase/jBPM.html</runTarget>
					<extraJvmArgs>-Xmx1024m -XX:MaxPermSize=256m</extraJvmArgs>
					<soyc>false</soyc>
					<hostedWebapp>src/main/webapp/</hostedWebapp>
					<server>org.jboss.errai.cdi.server.gwt.JettyLauncher</server>
					<!-- drools-compiler has dependency on org.eclipse.jdt.core.compiler:ecj:jar:3.5.1:compile, 
						see http://code.google.com/p/google-web-toolkit/issues/detail?id=4479 -->
					<gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath>
				</configuration>
				<executions>
					<execution>
						<id>gwt-clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
					<execution>
						<id>gwt-compile</id>
						<goals>
							<goal>resources</goal>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<warName>${project.artifactId}</warName>
					<outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
					<packagingExcludes>**/javax/**/*.*,**/client/**/*.class</packagingExcludes>

					<!--<webResources> -->
					<!--<resource> -->
					<!--&lt;!&ndash; this is relative to the pom.xml directory &ndash;&gt; -->
					<!--<directory>src/${webDescriptor}</directory> -->
					<!--</resource> -->
					<!--</webResources> -->
				</configuration>
			</plugin>

			<!-- Tests are skipped by default because they require additional GWT 
				dependencies. Run mvn with -Pintegration-test to enable testing. -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>

			<!-- TODO {manstis} Ensure in porcelli's refactoring -->
			<!-- Ensure the generated source files are included in the source path -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<id>add-generated-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>target/generated-sources/annotations</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jboss.errai</groupId>
				<artifactId>jacoco-gwt-maven-plugin</artifactId>
				<version>0.5.4.201202141554</version>
				<executions>
					<execution>
						<id>jacoco-gwt-prepare-agent</id>
						<phase>initialize</phase>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-gwt-report</id>
						<phase>site</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<configuration>
					<filesets>
						<fileset>
							<directory>${basedir}</directory>
							<includes>
								<include>.errai/**</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>gwt-maven-plugin</artifactId>
										<versionRange>[2.3.0,)</versionRange>
										<goals>
											<goal>resources</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.jboss.errai</groupId>
										<artifactId>jacoco-gwt-maven-plugin</artifactId>
										<versionRange>[0.0,)</versionRange>
										<goals>
											<goal>prepare-agent</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>